fixed services wrapping

--- a/styles/main.css
+++ b/styles/main.css
@@ -90,6 +90,7 @@ body {
 .services {
     margin: 10px;
     display: flex;
+    flex-flow: wrap;
 }
 
 .service {
